added avro generated schema

--- a/app-two/pom.xml
+++ b/app-two/pom.xml
@@ -35,6 +35,30 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro-maven-plugin</artifactId>
+        <version>${avro.version}</version>
+        <executions>
+          <execution>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>schema</goal>
+            </goals>
+            <configuration>
+              <sourceDirectory>${project.basedir}/../src/main/resources/avro/</sourceDirectory>
+              <imports>
+                <import>${project.basedir}/../src/main/resources/avro/rainData.avsc</import>
+              </imports>
+              <includes>
+                <include>*.avsc</include>
+              </includes>
+              <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
