--- a/pom.xml
+++ b/pom.xml
@@ -102,14 +102,7 @@
                         <version>5.3.2</version>
                     </dependency>
                 </dependencies>
-                <configuration>
-                    <!--<argLine>@{argLine} -more -arguments</argLine>-->
-                    <argLine>
-                        @{argLine}
-                        -javaagent:"${settings.localRepository}"/org/jmockit/jmockit/${jmockit.version}/jmockit-${jmockit.version}.jar
-                    </argLine>
-                </configuration>
-            </plugin>A
+            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
